--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -56,6 +56,7 @@
     <string name="referendum_vote_negative_type">Nay</string>
 
     <string name="referendum_details_your_vote">Your vote:</string>
+    <string name="referendum_details_timeline">Timeline</string>
     <string name="votes_view_start_vote">Vote</string>
 
     <string name="referendum_dapp_list_title">Use Nova DApp browser</string>
