--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyEllipsis">
+    <string name="common_read_more">Read more</string>
+
     <string name="common_ongoing">Ongoing</string>
     <string name="common_completed">Completed</string>
     <!--    <string name="crowdloan_completed_section">Completed</string>-->
@@ -52,6 +54,16 @@
 
     <string name="referendum_vote_positive_type">Aye</string>
     <string name="referendum_vote_negative_type">Nay</string>
+
+    <string name="referendum_details_your_vote">Your vote:</string>
+    <string name="referendum_details_timeline">Timeline</string>
+    <string name="votes_view_start_vote">Vote</string>
+
+    <string name="referendum_dapp_list_title">Use Nova DApp browser</string>
+
+    <string name="referendum_details_full_details">Full details</string>
+    <string name="voting_status">Voting status</string>
+    <string name="referendum_details_requested_amount">Requested amount</string>
 
     <string name="crowdloan_contributions_liquid_source">Liquid</string>
     <string name="crowdloan_contributions_parallel_source">Parallel</string>
