--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -98,6 +98,8 @@
     <string name="referendum_full_details_approve_threshold">Approve curve</string>
     <string name="referendum_full_details_support_threshold">Support curve</string>
     <string name="referendum_full_details_copy_hash">Copy hash</string>
+    <string name="referendum_positive_voters_title">Aye votes</string>
+    <string name="referendum_negative_voters_title">Nay votes</string>
 
     <string name="crowdloan_contributions_liquid_source">Liquid</string>
     <string name="crowdloan_contributions_parallel_source">Parallel</string>
