--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyEllipsis">
+    <string name="vote_revote">Revote</string>
+
     <string name="referendum_vote_unlock_hint">After locking period don’t forget to redeem your tokens</string>
 
     <string name="common_maximum_format">%s maximum</string>
