--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -110,6 +110,11 @@
     <string name="referendum_full_details_approve_threshold">Approve curve</string>
     <string name="referendum_full_details_support_threshold">Support curve</string>
     <string name="referendum_full_details_copy_hash">Copy hash</string>
+    <string name="referendum_positive_voters_title">Aye votes</string>
+    <string name="referendum_negative_voters_title">Nay votes</string>
+
+    <string name="referendum_voter_vote">%s votes</string>
+    <string name="referendum_voter_vote_details">%s × %sx</string>
 
     <string name="confirm_referendum_vote_title">Vote</string>
     <string name="confirm_referendum_vote_note">After locking period don’t forget to redeem your tokens</string>
