--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -115,8 +115,9 @@
     <string name="confirm_referendum_vote_note">After locking period don’t forget to redeem your tokens</string>
     <string name="confirm_referendum_vote_track">Track</string>
     <string name="confirm_referendum_vote_referendum">Referendum</string>
-    
-    <string name="confirm_governance_lock">Governance lock</string>
+
+    <string name="confirm_referendum_unlock_title">Unlock from Governance</string>
+    <string name="confirm_referendum_unlock_governance_lock">Governance lock</string>
 
     <string name="crowdloan_contributions_liquid_source">Liquid</string>
     <string name="crowdloan_contributions_parallel_source">Parallel</string>
