--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyEllipsis">
+    <string name="referendum_vote_chip_governance_lock">Reuse governance lock: %s</string>
+    <string name="referendum_vote_chip_all_locks">Reuse all locks : %s</string>
+
     <string name="common_amount_too_big">Amount is too big</string>
     <string name="refrendum_vote_not_enough_available_message">You don’t have enough available tokens to vote. Available to vote: %s.</string>
 
@@ -21,7 +24,7 @@
     <string name="referendum_vote_governance_lock">Governance lock</string>
     <string name="referendum_vote_locking_period">Locking period</string>
 
-    <string name="referendum_vote_setup_title">Vote for #%s</string>
+    <string name="referendum_vote_setup_title">Vote for %s</string>
     <string name="referendum_vote_select_conviction_title">Multiply votes by increasing locking period</string>
 
     <string name="referendum_timeline_state_preparing">Voting: Preparing</string>
