--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -138,6 +138,9 @@
     <string name="confirm_referendum_unlock_title">Unlock from Governance</string>
     <string name="confirm_referendum_unlock_governance_lock">Governance lock</string>
 
+    <string name="governance_unlock_tokens_title">Locked</string>
+    <string name="governance_unlock_tokens_action">Unlock</string>
+
     <string name="crowdloan_contributions_liquid_source">Liquid</string>
     <string name="crowdloan_contributions_parallel_source">Parallel</string>
 
