--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -140,8 +140,8 @@
     <string name="confirm_referendum_vote_referendum">Referendum</string>
     <string name="referendum_voters_empty_list_placeholder">List of voters will appear here</string>
 
-    <string name="confirm_referendum_unlock_title">Unlock from Governance</string>
-    <string name="confirm_referendum_unlock_governance_lock">Governance lock</string>
+    <string name="governance_unlock">Unlock</string>
+    <string name="confirm_governance_unlock_governance_lock">Governance lock</string>
 
     <string name="crowdloan_contributions_liquid_source">Liquid</string>
     <string name="crowdloan_contributions_parallel_source">Parallel</string>
