Fix freezes on initial content loading on crowdloans

--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyEllipsis">
+
+    <string name="common_zero" translatable="false">0</string>
+
     <string name="referendum_unlock_remains_locked_format">remains locked in %s</string>
 
     <string name="referendum_unlock_unlockable">Unlockable</string>
