--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyEllipsis">
+    <string name="referenda_list_placeholder">Referenda information will appear here when they start</string>
+
     <string name="referendum_missing_account_message">You should add %s account to the wallet in order to vote</string>
 
     <string name="dapp_sign_error_unsupported_chain">Unsupported chain with genesis hash %s</string>
