--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyEllipsis">
+    <!--<string name="dapp_main_welcome_title">Welcome\nto DApp portal</string>-->
+    <string name="dapp_main_welcome_title">Welcome to Nova Browser</string>
+
+    <!--<string name="dapp_main_welcome_subtitle">Connect to the Polkadot &amp; Kusama\necosystem web applications using\naccounts in Nova Wallet</string>-->
+    <string name="dapp_main_welcome_subtitle">Browse the web using your accounts from Nova Wallet</string>
+
     <string name="referenda_list_placeholder">Referenda information will appear here when they start</string>
 
     <string name="referendum_missing_account_message">You should add %s account to the wallet in order to vote</string>
@@ -794,8 +800,6 @@
     <string name="crowdloan_your_contributions">Your contributions</string>
     <string name="crownloans_raised_format" formatted="false">Raised: %s of %s</string>
     <string name="dapp_dapps">DApps</string>
-    <string name="dapp_main_welcome_subtitle">Connect to the Polkadot &amp; Kusama\necosystem web applications using\naccounts in Nova Wallet</string>
-    <string name="dapp_main_welcome_title">Welcome\nto DApp portal</string>
     <string name="ecdsa_selection_subtitle">(BTC/ETH compatible)</string>
     <string name="ecdsa_selection_title">ECDSA</string>
     <string name="ed25519_selection_subtitle">ed25519 (alternative)</string>
