Fixed invalid view of banner content

--- a/common/src/main/res/values-ru/strings.xml
+++ b/common/src/main/res/values-ru/strings.xml
@@ -376,8 +376,8 @@
     <string name="dapp_favourites_remove_description">”%s” DApp будет удален из Избранного</string>
     <string name="dapp_favourites_remove_title">Удалить из Избранного?</string>
     <string name="dapp_list_placeholder">Список DApps появится здесь</string>
-    <string name="dapp_main_welcome_subtitle">Подключайтесь к приложениям\nэкосистемы Полькадот &amp; Кусама,\nиспользуя аккаунты из Nova Wallet</string>
-    <string name="dapp_main_welcome_title">Добро пожаловать\nна портал приложений</string>
+    <string name="dapp_main_welcome_subtitle">Подключайтесь к приложениям экосистемы Полькадот &amp; Кусама, используя аккаунты из Nova Wallet</string>
+    <string name="dapp_main_welcome_title">Добро пожаловать на портал приложений</string>
     <string name="dapp_phishing_go_back">Хорошо, уходим отсюда</string>
     <string name="dapp_phishing_subtitle">Nova Wallet считает, что этот веб-сайт может поставить под угрозу безопасность ваших учетных записей и ваших токенов.</string>
     <string name="dapp_phishing_title">Обнаружен фишинг</string>
