--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyEllipsis">
+    <string name="asset_add_evm_token_already_exist_title">This token already exist</string>
+    <string name="asset_add_evm_token_already_exist_message">The entered contract address is present in Nova as a MOVR token.</string>
+
+    <string name="asset_add_evm_token_invalid_contract_address_title">Invalid contract address</string>
+    <string name="asset_add_evm_token_invalid_contract_address_message">The entered contract address is not ERC-20 contract.</string>
+
     <string name="asset_add_token_enter_contract_address">Enter contract address</string>
     <string name="asset_add_token_enter_symbol">Enter symbol</string>
     <string name="asset_add_token_enter_decimals">Enter decimals</string>
