--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyEllipsis">
-    <!--<string name="dapp_main_welcome_title">Welcome\nto DApp portal</string>-->
+
     <string name="dapp_main_welcome_title">Welcome to Nova Browser</string>
 
-    <!--<string name="dapp_main_welcome_subtitle">Connect to the Polkadot &amp; Kusama\necosystem web applications using\naccounts in Nova Wallet</string>-->
     <string name="dapp_main_welcome_subtitle">Browse the web using your accounts from Nova Wallet</string>
 
     <string name="manage_assets_add_token">Add token</string>
@@ -28,16 +27,16 @@
     <string name="assets_add_token_enter_info_title">Enter ERC-20 token details</string>
 
     <string name="assets_add_token_enter_info_address_label">Contract address</string>
-    <string name="assets_add_token_enter_info_address_hint">0x...</string>
+    <string name="assets_add_token_enter_info_address_hint" translatable="false">0x...</string>
 
     <string name="assets_add_token_enter_info_symbol_label">Symbol</string>
-    <string name="assets_add_token_enter_info_symbol_hint">USDT</string>
+    <string name="assets_add_token_enter_info_symbol_hint" translatable="false">USDT</string>
 
     <string name="assets_add_token_enter_info_decimals_label">Decimals</string>
-    <string name="assets_add_token_enter_info_decimals_hint">18</string>
+    <string name="assets_add_token_enter_info_decimals_hint" translatable="false">18</string>
 
     <string name="assets_add_token_enter_info_price_label">Coingecko link for price info (Optional) </string>
-    <string name="assets_add_token_enter_info_price_hint">www.coingecko.com/en/coins/tether</string>
+    <string name="assets_add_token_enter_info_price_hint" translatable="false">www.coingecko.com/en/coins/tether</string>
 
     <string name="assets_add_token_select_chain_title">Select network to add ERC-20 token</string>
 
