--- a/common/src/main/res/values-ru/strings.xml
+++ b/common/src/main/res/values-ru/strings.xml
@@ -127,11 +127,33 @@
     <string name="accounts_add_wallet">Добавить кошелёк</string>
     <string name="accounts_change_chain_account">Изменить аккаунт %s</string>
     <string name="accounts_change_chain_secrets">Изменить аккаунт</string>
+    <string name="asset_add_evm_token_already_exist_message">Введенный адрес контракта уже добавлен в Nova как токен %s.</string>
+    <string name="asset_add_evm_token_already_exist_title">Этот токен уже добавлен</string>
+    <string name="asset_add_evm_token_invalid_coin_gecko_link_message">Пожалуйста, убедитесь, что введенный URL-адрес имеет следующую форму: www.coingecko.com/en/coins/tether.</string>
+    <string name="asset_add_evm_token_invalid_coin_gecko_link_title">Недействительная ссылка на CoinGecko</string>
+    <string name="asset_add_evm_token_invalid_contract_address_message">Введенный адрес контракта не является контрактом ERC-20.</string>
+    <string name="asset_add_evm_token_invalid_contract_address_title">Неверный адрес контракта</string>
+    <string name="asset_add_evm_token_invalid_decimals_message">Число десятичных знаков токена должно быть не менее 0 и не более 36.</string>
+    <string name="asset_add_evm_token_invalid_decimals_title">Недопустимое число десятичных знаков токена</string>
+    <string name="asset_add_token_enter_contract_address">Введите адрес контракта</string>
+    <string name="asset_add_token_enter_decimals">Введите число десятичных знаков токена</string>
+    <string name="asset_add_token_enter_symbol">Введите символ</string>
+    <string name="assets_add_token">Добавить токен</string>
+    <string name="assets_add_token_enter_info_address_label">Адрес контракта</string>
+    <string name="assets_add_token_enter_info_decimals_label">Число десятичных знаков токена</string>
+    <string name="assets_add_token_enter_info_price_label">Ссылка Coingecko для курса валют (необязательно)</string>
+    <string name="assets_add_token_enter_info_symbol_label">Символ</string>
+    <string name="assets_add_token_enter_info_title">Введите данные ERC-20 токена</string>
+    <string name="assets_add_token_select_chain_title">Выберите сеть для добавления ERC-20 токена</string>
     <string name="assets_balance_details_locks_crowdloans">Краудлоуны</string>
     <string name="assets_balance_details_locks_democrac">Демократия</string>
     <string name="assets_balance_details_locks_phrelect">Выборы</string>
     <string name="assets_balance_details_locks_staking">Стейкинг</string>
     <string name="assets_balance_details_locks_vesting">Вестинг</string>
+    <string name="assets_filter_title">Фильтр токенов</string>
+    <string name="assets_manage_tokens_all_networks">Все сети</string>
+    <string name="assets_manage_tokens_partial_networks" formatted="false">%s (и еще %s)</string>
+    <string name="assets_manage_tokens_title">Управление токенами</string>
     <string name="assets_receive_ledger_not_supported_message" formatted="false">Не переводите %s на Ledger аккаунт так как Ledger не поддерживает переводы %s, таким образом ассет будет недоступен для перевода на этом аккаунте</string>
     <string name="assets_receive_ledger_not_supported_title">Ledger не поддерживает этот токен</string>
     <string name="assets_search_hint">Поиск по названию сети или токена</string>
@@ -188,6 +210,7 @@
     <string name="common_crypto_type">Тип ключевой пары</string>
     <string name="common_date">Дата</string>
     <string name="common_details">Подробности</string>
+    <string name="common_disabled">Отключен</string>
     <string name="common_done">Готово</string>
     <string name="common_edit">Редактировать</string>
     <string name="common_email_chooser_title">Выберите приложение для работы с почтой</string>
@@ -236,6 +259,7 @@
     <string name="common_network">Сеть</string>
     <string name="common_next">Далее</string>
     <string name="common_no">Нет</string>
+    <string name="common_no_app_to_handle_import_intent">Приложение для импорта файлов не найдено на устройстве. Пожалуйста, установите его и повторите попытку</string>
     <string name="common_no_changes">Нет изменений</string>
     <string name="common_no_screenshot_message_v2_2_0">Мы собираемся показать вашу мнемонику. Убедитесь, что никто не видит ваш экран и не делайте скриншотов - к ним могут получить доступ вредоносные программы</string>
     <string name="common_not_enough_funds_message">К сожалению, у вас недостаточно средств для оплаты сетевого сбора.</string>
@@ -287,7 +311,6 @@
     <string name="common_warning">Предупреждение</string>
     <string name="common_yes">Да</string>
     <string name="common_zero_amount_error">Сумма должна быть больше нуля</string>
-    <string name="common_no_app_to_handle_import_intent">Приложение для импорта файлов не найдено на устройстве. Пожалуйста, установите его и повторите попытку</string>
     <string name="confirm_referendum_vote_referendum">Референдум</string>
     <string name="confirm_referendum_vote_title">Голосование</string>
     <string name="confirm_referendum_vote_track">Трек</string>
@@ -376,8 +399,8 @@
     <string name="dapp_favourites_remove_description">”%s” DApp будет удален из Избранного</string>
     <string name="dapp_favourites_remove_title">Удалить из Избранного?</string>
     <string name="dapp_list_placeholder">Список DApps появится здесь</string>
-    <string name="dapp_main_welcome_subtitle">Подключайтесь к приложениям экосистемы Полькадот &amp; Кусама, используя аккаунты из Nova Wallet</string>
-    <string name="dapp_main_welcome_title">Добро пожаловать на портал приложений</string>
+    <string name="dapp_main_welcome_subtitle">Просматривайте веб-страницы, используя ваши аккаунты из Nova Wallet</string>
+    <string name="dapp_main_welcome_title">Добро пожаловать в Nova Browser</string>
     <string name="dapp_phishing_go_back">Хорошо, уходим отсюда</string>
     <string name="dapp_phishing_subtitle">Nova Wallet считает, что этот веб-сайт может поставить под угрозу безопасность ваших учетных записей и ваших токенов.</string>
     <string name="dapp_phishing_title">Обнаружен фишинг</string>
@@ -442,6 +465,7 @@
     <string name="ledger_wallet_details_description">Этот кошелёк добавлен из Ledger устройства. Nova Wallet поможет создать любую операцию, и вам будет необходимо подписать ее с помощью Ledger устройства</string>
     <string name="ledher_import_select_address_title">Выберите аккаунт для добавления в кошелёк</string>
     <string name="make_payout_transaction_sent">Транзакция на выплату отправлена</string>
+    <string name="manage_assets_add_token">Добавить</string>
     <string name="mnemonic_error_try_another_one">Пожалуйста, попробуйте другую.</string>
     <string name="mnemonic_error_try_another_one_v2_2_0">Ваша мнемоника недействительна, пожалуйста, проверьте еще раз порядок слов</string>
     <string name="network_fee">Комиссия сети</string>
@@ -492,6 +516,7 @@
     <string name="recovery_passphrase">Мнемоническая фраза</string>
     <string name="recovery_raw_seed">Сид</string>
     <string name="recovery_source_type">Тип источника</string>
+    <string name="referenda_list_placeholder">Информация о референдумах появится здесь, когда они начнутся</string>
     <string name="referendum_aye_format">За: %s</string>
     <string name="referendum_dapp_list_title">Используйте Nova DApp браузер</string>
     <string name="referendum_description_fallback">Только автор референдума может редактировать это описание и заголовок. Если у вас есть доступ к аккаунту автора, посетите Polkassembly и заполните информацию о вашем референдуме</string>
@@ -578,7 +603,6 @@
     <string name="referendum_votes_format">%s голосов</string>
     <string name="referendum_whitelisted_caller">fellowship: белый список</string>
     <string name="referendum_your_vote_format">Ваш голос: %s голосов</string>
-    <string name="referenda_list_placeholder">Информация о референдумах появится здесь, когда они начнутся</string>
     <string name="refrendum_vote_already_completed_message">Референдум завершен, голосовать больше нельзя</string>
     <string name="refrendum_vote_already_completed_title">Референдум завершен</string>
     <string name="refrendum_vote_already_delegating_message">Вы делегируете голоса в треке данного референдума. Пожалуйста, либо попросите делегата проголосовать, либо удалите делегирование, чтобы иметь возможность голосовать напрямую.</string>
