--- a/common/src/main/res/values-ru/strings.xml
+++ b/common/src/main/res/values-ru/strings.xml
@@ -133,14 +133,14 @@
     <string name="asset_add_evm_token_invalid_coin_gecko_link_title">Недействительная ссылка на CoinGecko</string>
     <string name="asset_add_evm_token_invalid_contract_address_message">Введенный адрес контракта не является контрактом ERC-20.</string>
     <string name="asset_add_evm_token_invalid_contract_address_title">Неверный адрес контракта</string>
-    <string name="asset_add_evm_token_invalid_decimals_message">Число десятичных знаков токена должно быть не менее 0 и не более 36.</string>
-    <string name="asset_add_evm_token_invalid_decimals_title">Недопустимое число десятичных знаков токена</string>
+    <string name="asset_add_evm_token_invalid_decimals_message">Число десятичных знаков должно быть не менее 0 и не более 36.</string>
+    <string name="asset_add_evm_token_invalid_decimals_title">Недопустимое число десятичных знаков</string>
     <string name="asset_add_token_enter_contract_address">Введите адрес контракта</string>
-    <string name="asset_add_token_enter_decimals">Введите число десятичных знаков токена</string>
+    <string name="asset_add_token_enter_decimals">Введите число десятичных знаков</string>
     <string name="asset_add_token_enter_symbol">Введите символ</string>
     <string name="assets_add_token">Добавить токен</string>
     <string name="assets_add_token_enter_info_address_label">Адрес контракта</string>
-    <string name="assets_add_token_enter_info_decimals_label">Число десятичных знаков токена</string>
+    <string name="assets_add_token_enter_info_decimals_label">Число десятичных знаков</string>
     <string name="assets_add_token_enter_info_price_label">Ссылка Coingecko для курса валют (необязательно)</string>
     <string name="assets_add_token_enter_info_symbol_label">Символ</string>
     <string name="assets_add_token_enter_info_title">Введите данные ERC-20 токена</string>
