--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyEllipsis">
 
+    <!--<string name="assets_search_placeholder">No networks or tokens with\nentered name were found</string>-->
+    <string name="assets_search_placeholder">No tokens with\nentered name were found</string>
+
     <string name="assets_filter_title">Filter tokens</string>
 
     <string name="dapp_main_welcome_title">Welcome to Nova Browser</string>
@@ -408,7 +411,6 @@
     <string name="wallet_tokens">Tokens</string>
 
     <string name="assets_search_hint">Search by network or token</string>
-    <string name="assets_search_placeholder">No networks or tokens with\nentered name were found</string>
 
     <string name="crowdloan_contributions_returns_in">Returns in %s</string>
     <string name="crowdloan_contributions_to_be_returned">To be returned by parachain</string>
